# parfait

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  OVERVIEW.md  README.md  ROADMAP.md  dev.pinkpixel.Parfait.yml  meson.build
.codex/: AGENTS.md
.github/workflows/: linux-packages.yml
data/: dev.pinkpixel.Parfait.desktop.in  dev.pinkpixel.Parfait.gschema.xml  dev.pinkpixel.Parfait.metainfo.xml.in  meson.build
data/icons/: meson.build
packaging/linux/: AppRun  build-packages.sh  nfpm.yaml
packaging/linux/scripts/: postremove.sh
src/: main.rs  meson.build  preferences.rs  window.rs
