install_data(
  'dev.pinkpixel.Parfait-16.png',
  rename: 'dev.pinkpixel.Parfait.png',
  install_dir: datadir / 'icons' / 'hicolor' / '16x16' / 'apps'
)

install_data(
  'dev.pinkpixel.Parfait-32.png',
  rename: 'dev.pinkpixel.Parfait.png',
  install_dir: datadir / 'icons' / 'hicolor' / '32x32' / 'apps'
)

install_data(
  'dev.pinkpixel.Parfait-48.png',
  rename: 'dev.pinkpixel.Parfait.png',
  install_dir: datadir / 'icons' / 'hicolor' / '48x48' / 'apps'
)

install_data(
  'dev.pinkpixel.Parfait-64.png',
  rename: 'dev.pinkpixel.Parfait.png',
  install_dir: datadir / 'icons' / 'hicolor' / '64x64' / 'apps'
)

install_data(
  'dev.pinkpixel.Parfait-128.png',
  rename: 'dev.pinkpixel.Parfait.png',
  install_dir: datadir / 'icons' / 'hicolor' / '128x128' / 'apps'
)

install_data(
  'dev.pinkpixel.Parfait.png',
  install_dir: datadir / 'icons' / 'hicolor' / '256x256' / 'apps'
)

install_data(
  'dev.pinkpixel.Parfait-512.png',
  rename: 'dev.pinkpixel.Parfait.png',
  install_dir: datadir / 'icons' / 'hicolor' / '512x512' / 'apps'
)
